# Bedrock.Agents

./: .gitignore  DEVELOPMENT.md  README.md  config.yaml.example  pyproject.toml
docs/: example-requests.md  troubleshooting.md
src/bedrock_iac_agent/: __init__.py  agent.py  audit_logger.py  cli.py  config_manager.py  configuration_generator.py  errors.py  github_integration.py  golden_modules_inventory.py  interfaces.py  logging_config.py  models.py  natural_language_parser.py
tests/: __init__.py  test_agent_response_formatting.py  test_audit_logger.py  test_cli.py  test_cli_integration.py  test_configuration_generator.py  test_errors.py  test_github_integration.py  test_github_integration_integration.py  test_golden_modules_inventory.py  test_interfaces.py  test_logging_config.py  test_models.py  test_natural_language_parser.py  test_natural_language_parser_integration.py  test_snapshot_tfvars.py
tests/snapshots/: api_gateway__dev.tfvars  cloudwatch_log_group__dev.tfvars  dynamodb_table__dev.tfvars  ec2_instance__dev.tfvars  ec2_instance__prod.tfvars  iam_role__dev.tfvars  lambda_function__dev.tfvars  lambda_function__prod.tfvars  rds_database__dev.tfvars  rds_database__prod.tfvars  s3_bucket__dev.tfvars  s3_bucket__prod.tfvars  s3_bucket__staging.tfvars  security_group__dev.tfvars  sns_topic__dev.tfvars  sqs_queue__dev.tfvars  vpc__dev.tfvars
